--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ pydantic
 requests
 rfc3986
 mcp
+protobuf>=4.25.0
+grpcio-tools>=1.60.0
+grpcio>=1.60.0
+pyarrow>=16.0.0
+googleapis-common-protos>=1.63.0
